--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -22,11 +22,11 @@
             <div class="container">
                 <div class="d-flex flex-wrap align-items-center justify-content-center
                 justify-content-lg-start">
-                <a class="navbar-brand" href="{% url 'home' %}">Newspaper</a>
+                <a class="navbar-brand" href="{% url 'home' %}">AN</a>
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center
                 mb-md-0">
                 {% if user.is_authenticated %}
-                <li><a href="#" class="nav-link px-2 link-dark">+ New</a></li>
+                <li><a href="#" class="nav-link px-2 link-dark">+ an</a></li>
                 </ul>
                 <div class="dropdown text-end">
                 <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle"
